First step of my program

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/balance
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
+server.error.include-message=always
