Corrected the file application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/balance
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
-server.error.include-message=always
+spring.jpa.hibernate.ddl-auto=create-drop
+
