--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/balance
+spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 spring.jpa.hibernate.ddl-auto=create-drop
